[package]
name = "mini_os"
version = "0.1.0"
edition = "2018"

[dependencies]

# Disabling Unwinding # 
# Ensure the program will abort immediately when panic occour,
# as the control of error handling and memory management is overtaken.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
